# gsltest

./: CMakeLists.txt
.github/workflows/: windows.yml
lib/: CMakeLists.txt  mygsl.cpp  mygsl.h
src/: CMakeLists.txt  FFTExample.cpp  main.cpp
